--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,7 +16,7 @@ LAYERDEPENDS_homeassistant = "\
     networking-layer \
 "
 
-LAYERSERIES_COMPAT_homeassistant = "styhead"
+LAYERSERIES_COMPAT_homeassistant = "scarthgap"
 
 
 # The dynamic-layers directory hosts the extensions and layer specific
